--- a/src/app/components/details-header/details-header.component.html
+++ b/src/app/components/details-header/details-header.component.html
@@ -1,1 +1,7 @@
-<p>details-header works!</p>
+<header id="details-header">
+  <div></div>
+  <div class="action-btns">
+    <mat-icon class="icon">edit</mat-icon>
+    <mat-icon class="icon">delete</mat-icon>
+  </div>
+</header>
