--- a/src/app/views/subnav/subnav.component.html
+++ b/src/app/views/subnav/subnav.component.html
@@ -1,8 +1,10 @@
-<main>
-<app-icon-nav></app-icon-nav>
-<app-subnav-list></app-subnav-list>
-<app-details></app-details>
-</main>
+<div class="grid-container">
+  <app-icon-nav class="icon-nav"></app-icon-nav>
+  <app-subnav-list class="list-area"></app-subnav-list>
+  <div class="content-area">
+    <router-outlet></router-outlet>
+  </div>
+</div>
 
 
 
