--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,18 +1,8 @@
-<section>
+<section id="details-view">
   <app-details-header></app-details-header>
-  <div>
-    <mat-tab-group>
+  <mat-tab-group>
     <mat-tab label="First"> Content 1 </mat-tab>
     <mat-tab label="Second"> Content 2 </mat-tab>
     <mat-tab label="Third"> Content 3 </mat-tab>
   </mat-tab-group>
-  </div>
-  <!-- <mat-tab-group>
-    <mat-tab label="First"> Content 1 </mat-tab>
-    <mat-tab label="Second"> Content 2 </mat-tab>
-    <mat-tab label="Third"> Content 3 </mat-tab>
-  </mat-tab-group> -->
-  <div>
-    ;sdklfjk;lsdjf;kldj
-  </div>
 </section>
