--- a/src/app/components/icon-nav/icon-nav.component.scss
+++ b/src/app/components/icon-nav/icon-nav.component.scss
@@ -7,16 +7,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
   ul {
+    margin-top: 0;
     padding-inline-start: 0;
-
     li {
-      padding: 8px 16px;
+      padding: 8px;
+      margin: 8px 0px;
+      width: 1.75em;
+      height: 1.75em;
       list-style-type: none;
-
-      mat-icon {
-        color: gray;
+      &.active-link {
+        border-radius: 5px;
+        background-color: #eae9f0;
+        mat-icon {
+          color: #5e5493;
+        }
       }
     }
   }
