--- a/src/app/components/subnav-list/subnav-list.component.scss
+++ b/src/app/components/subnav-list/subnav-list.component.scss
@@ -1,9 +1,54 @@
-#subnav {
+#subnav-main {
+  border-right: 1px solid #d9d9d9;
   background-color: #fff;
-  border-right: 1px solid #d3d3de;
   height: 100%;
+  max-width: 25rem;
+  min-width: 15rem;
 
   #subnav-header {
-    border-bottom: 1px solid #d3d3de;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #d9d9d9;
+    padding: 8px 8px 8px 16px;
+
+    .subnav-title {
+      margin: 0;
+      font-size: 16px;
+      font-weight: 500;
+      color: #212121;
+    }
+  }
+
+  #subnav-list-main {
+    .list-item {
+      border-bottom: 1px solid #d9d9d9;
+      .item-header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        h3 {
+          padding-bottom: 0;
+          margin-bottom: 0;
+        }
+      }
+      p {
+        color: #757575;
+        font-size: 12px;
+      }
+      &.active-link {
+        background-color: #eae9f0;
+        h3 {
+          font-weight: 700;
+          color: #5e5493;
+        }
+        p,
+        mat-icon {
+          color: #5e5493;
+        }
+      }
+    }
   }
 }
