--- a/src/app/components/tab-content/tab-content.component.html
+++ b/src/app/components/tab-content/tab-content.component.html
@@ -1,1 +1,20 @@
-<p>tab-content works!</p>
+<div id="tab-container">
+  <div id="wrapper">
+    <section id="tab-content">
+      <article class="card-grid">
+        <mat-card>
+          <mat-card-header>
+            <mat-card-title>Card Title</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <p>content</p>
+          </mat-card-content>
+          <mat-card-footer>
+            <button mat-raised-button>Click Me</button>
+          </mat-card-footer>
+        </mat-card>
+    </article>
+  </section>
+  </div>
+</div>
+
