--- a/src/app/components/details-header/details-header.component.scss
+++ b/src/app/components/details-header/details-header.component.scss
@@ -1,5 +1,44 @@
-#details-header {
-  display: flex;
-  flex-direction: row;
-  color: #212121;
+#details-header-container {
+  background-color: #fff;
+  border-bottom: 1px solid #d9d9d9;
+  width: 100%;
+
+  #wrapper {
+    margin: auto;
+    width: 80%;
+    padding-top: 8px;
+  }
+
+  #top-actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    span {
+      font-size: 10px;
+      text-transform: uppercase;
+      letter-spacing: 0.5ch;
+      color: #757575;
+    }
+  }
+  #header-details {
+    margin-top: 8px;
+    h1 {
+      margin: 0;
+      padding: 0;
+      margin-bottom: 8px;
+    }
+    p {
+      font-size: 12px;
+      margin: 0;
+      padding: 0;
+    }
+  }
 }
+
+// #details-header {
+//   display: flex;
+//   flex-direction: row;
+//   background-color: #fff;
+//   color: #212121;
+//   padding: 16px;
+// }
