--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,8 +1,4 @@
 <section id="details-view">
   <app-details-header></app-details-header>
-  <mat-tab-group>
-    <mat-tab label="First"> Content 1 </mat-tab>
-    <mat-tab label="Second"> Content 2 </mat-tab>
-    <mat-tab label="Third"> Content 3 </mat-tab>
-  </mat-tab-group>
+  <app-tab-content></app-tab-content>
 </section>
